--- a/styles/architect.css
+++ b/styles/architect.css
@@ -1,5 +1,111 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;400;500;600;700;800&display=swap');
 
-*{
+* {
     font-family: 'Work Sans', sans-serif;
+}
+
+header {
+    background: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav>ul {
+    display: flex;
+    list-style: none;
+}
+
+nav li {
+    margin-right: 40px;
+    text-align: center;
+
+}
+
+nav a {
+    color: #424242;
+    text-decoration: none;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 26px;
+}
+
+.nav-title {
+    color: #131313;
+    text-align: center;
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+/* banner styles */
+.banner {
+    width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
+}
+
+.banner-content {
+    width: 45%;
+    max-width: 1920px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.banner-title {
+    color: #131313;
+    text-align: center;
+    font-size: 64px;
+    font-weight: 700;
+}
+
+.banner-content p {
+    color: var(--Dark-03, #727272);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.primary-btn {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    text-align: center;
+    font-size: 1.25rem;
+    padding: 20px 25px;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 70px;
+}
+
+.banner img {
+    width: 100%;
+}
+
+/* responsive media queries */
+@media screen and (max-width: 576px) {
+    header {
+        padding: 20px;
+        width: 100%;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+
+    .banner-title {
+        font-size: 2em;
+    }
+    .primary-btn{
+        padding: 1.25rem 1.5rem;
+    }
+    .banner-content img{
+        width: auto;
+    }
+    
 }
